Aufgaben/Taschenrechner_vereinfacht/TaschenRechner-Grammatik.txt
<ZIFFER> ::= 0 | 1 | 2 | 3 | 4 | 5 | 6 | 7 | 8 | 9 
<ZAHL> ::= <ZIFFER> | <ZIFFER> <ZAHL>
<DEZIMALZAHL> ::= <ZAHL> | <ZAHL> "." <ZAHL>

<OPERATOR> ::= + | - | / | * | ^

<VARIABLE> ::= a | b | c | … | x | y | z

----

<WERT> ::= <DEZIMALZAHL> | <VARIABLE> | "(" <PROGRAM> ")"

<FAKTOR> ::= [ "-" ] <WERT> 

<POTENZ> ::= <FAKTOR> | <FAKTOR> "^" <POTENZ> 

<TERM> ::= <POTENZ> | <POTENZ> "*" <TERM> | <POTENZ> "/" <TERM> 

<AUSDRUCK> ::= <TERM> | <TERM> "+" <AUSDRUCK> | <TERM> "-" <AUSDRUCK> 

<PROGRAM> ::= <AUSDRUCK>  



<PROGRAM> ::= [ "-" ] <WERT> | [ "-" ] <WERT> <OPERATOR> <PROGRAM>
